# understanding-ai

./: README.md  pyproject.toml
01-terminology/: terminology.md  terminology.py
01-terminology/__marimo__/session/: terminology.py.json
02-machine-learning/: Naive Bayes- Walkthrough.ipynb  eda1.py  naive-bayes.py
02-machine-learning/.ipynb_checkpoints/: Naive Bayes- Walkthrough-checkpoint.ipynb  naive-bayes-checkpoint.ipynb
02-machine-learning/__marimo__/session/: naive-bayes.py.json
