[project]
name = "llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.8.4",
    "huggingface>=0.0.1",
    "jupyterlab>=4.5.6",
    "jupyterlab-rise>=0.43.1",
    "marimo>=0.23.1",
    "mypy>=1.20.1",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = []

[[tool.mypy.overrides]]
module = ["nltk.*"]
ignore_missing_imports = true
